# -bom

./: .editorconfig  .env.example  .gitignore  ERROR_HANDLING_GUIDE.md  ODS_test.xlsx  README.md  TEST_RESULTS.md  WH-DFYF-H47-26-00 H47产品履历模版2026-2-7.xlsx  add_test_dimensions.py  add_test_project.py  analyze_template.py  app.py  check_all_projects.py  check_all_projects_fixed.py  check_all_records.py  check_api_report.py  check_api_report2.py  check_bom_data.py  check_bom_db.py  check_bom_images.py  check_bom_import.py  check_bom_records.py  check_bom_sort.py  check_bom_weights.py  check_db.py  check_db_data.py  check_db_files.py  check_db_records.py  check_db_structure.py  check_db_tables.py  check_db_with_sqlalchemy.py  check_dimensions.py  check_dimensions_actual.py  check_dimensions_data.py  check_dimensions_structure.py  check_duplicate_details.py  check_duplicates.py  check_excel_headers.py  check_excel_structure.py  check_final_report.py  (+105 more)
.github/: CODE_REVIEW_README.md  PULL_REQUEST_TEMPLATE.md
.super-dev/: AGENTS.md  project.md
.trae/: project_rules.md
.workbuddy/: expert-history.json
bom_system/: __init__.py  admin.py  api.py  api_main.py  config.py  container.py  correct_dimension_validator.py  importer.py  models.py  multi_dimension_summary.md  multi_dimension_validator.py  process_capability.py  services.py  simple_validator.py  validate_part_import.py  validation_summary.md
docs/: CODE_REVIEW_GUIDE.md  README.md  api-contract.md  frontend_startup_guide.md  完整项目设计文档.md  项目设计文档.md
output/: Y1392191_初始过程能力分析报告.xlsx  dimension-drawing-feature-architecture.md  dimension-drawing-feature-prd.md  dimension-drawing-feature-uiux.md  expert-pm-advice.md  my-project-host-compatibility.md  (+12 more)
(+282 files in other folders)
